# PA1

./: .gitignore  CMakeLists.txt  README.md  aaaaa.cpp
exam/: dom_test0000_in.txt  domino.cpp  maxOfList.cpp  registration.cpp
other/AAG/: aag.cpp
other/leetcode/: two_sum.cpp
other/lessons/cv01/: first_code.cpp
other/lessons/cv02/: calk.cpp  minmax.cpp  time.cpp
other/lessons/cv03/: 2D.cpp  3D.cpp  cool_calk.cpp  cv03_delka.cpp  equation_two.cpp  rym_num.cpp  teplota.cpp
other/lessons/cv04/: KNP.cpp  cv04_tab.cpp  datum.cpp  numbers_to_words.cpp  odd_number.cpp  prvocisla.cpp  rovnice.cpp  sort_of_numbers.cpp  triangle.cpp  week.cpp  year.cpp
other/lessons/cv05/: arrayStat.cpp  balik.cpp  cv05_kalkulacka.cpp  gcd.cpp  mail.cpp  rectangle.cpp  triangle.cpp  triangle_same.cpp  water.cpp
other/lessons/cv06/: fibonacci.cpp  inside_triangle.cpp  matice.cpp  representation.cpp  tribonacci.cpp
other/prosem/sem01/: printf1.cpp  printf2.cpp  stream1.cpp
other/prosem/sem02/: 01_assoc.c  01_varinit.c  02_med3.c  02_varinit.c  03_printf.c  03_sum01.c  (+13 more)
progtest/prog00/: README.md  quotes.cpp
progtest/prog01/: ABC.cpp  bankovni_ucet.cpp
progtest/prog02/: SETI.cpp  soucet_delitelu.cpp  test.sh
progtest/prog03/: bells.c  bells2.cpp  working_days_counter.cpp
progtest/prog04/: castle.cpp  matrix.cpp  sequance.cpp
progtest/prog05/: airlines.cpp  reviews.cpp
progtest/prog06/: list.cpp  phone_list.cpp  test.sh
progtest/prog07/: game.cpp
progtest/prog08/: link_list.cpp  list_3b.cpp  lst_year.cpp  matrix.cpp  test1
progtest/work_files_castles/: a  b  c  d
(+28 files in other folders)
